two-way binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
   <!-- Content here -->
-  <h2>Angular</h2>
+  <courses></courses>
+  <!-- <h2>Angular</h2>
   <div class="card-deck">
     <div class="card">
       <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
@@ -35,5 +36,5 @@
         <small class="text-muted">Last updated 3 mins ago</small>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
