--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,8 +1,4 @@
 
 <div class="countainer-fluid">
-  Title : {{cources.title | uppercase | lowercase}} <br/>
-  Students : {{cources.students | number}} <br/>
-  Rating : {{cources.rating | number:'1.2-2'}} <br/>
-  Price : {{cources.price | currency:'INR':true:'3.2-2'}} <br/>
-  Release Date : {{cources.releaseDate | date:'mediumDate'}} <br/>
+ <p>{{text | summary:10}}</p>
 </div>
