--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="container-fluid">
- <favorite></favorite>
+ <input type="text" phoneFormat maxlength="10" [(ngModel)] = "phone" (keyup)="onUpdate()" >
 </div>
